compiler-core/src/parse/snapshots/gleam_core__parse__tests__internal_attribute_on_type_variant.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1565
expression: "\ntype Wibble {\n    @internal\n    Wibble1\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:3:5
  │
3 │     @internal
  │     ^^^^^^^^^ Variant attribute(s) are unknow.

Try `@deprecated`.
