compiler-core/src/parse/snapshots/gleam_core__parse__tests__invalid_pattern_label_shorthand_3.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n  let Wibble(arg::) = todo\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let Wibble(arg::) = todo
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:18
  │
3 │   let Wibble(arg::) = todo
  │                  ^ I was not expecting this

Found `:`, expected one of: 
- `)`
